fix: sizes, add gaps

--- a/blocks/cards/__pic/cards__pic.css
+++ b/blocks/cards/__pic/cards__pic.css
@@ -1,3 +1,3 @@
 .cards__pic {
-  margin: 0 0 0 10px;
+  padding: 0 0 0 10px;
 }
